springboot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bayu-springboot-dep1
  namespace: development
spec:
  selector:
    matchLabels:
      app: bayu-springboot
  replicas: 1
  template:
    metadata:
      labels:
        app: bayu-springboot
    spec:
      containers:
        - name: bayu-springboot
          image: bayukrsn/bayu-springboot:v8
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
