springboot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bayu-springboot-service1
  namespace: development
spec:
  type: NodePort
  selector:
    app: bayu-springboot
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30782
